Redo Four Video Section
Redo Four Video Section- css file change, .scss implementation on a smaller webpage html

--- a/intro.html
+++ b/intro.html
@@ -6,7 +6,7 @@
     <link href="images/icon-logo-fav.svg"  rel="icon" type="image/svg+xml">
     <link href="css/reset.css" rel="stylesheet">
     <link href="css/grid.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
+    <link href="css/change.css" rel="stylesheet">
     <title>E. O Opadele</title>
 </head>
 
